@@ -14,7 +14,7 @@ repositories {
 }
 
 javafx {
-    version = "21.0.1"
+    version = "17.0.10"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -24,8 +24,11 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
     testImplementation 'org.testfx:openjfx-monocle:17.0.10'
+
+    testImplementation 'org.testfx:testfx-core:4.0.17'
     testImplementation 'org.testfx:testfx-junit5:4.0.17'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
     // Additional libraries
@@ -101,6 +104,13 @@ test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+    }
+    doFirst {
+        def javafxLibPath = getJavaFXLibPath()
+        jvmArgs = [
+                '--module-path', javafxLibPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
     }
 }
 
